--- a/src/components/layout/TheHeader.css
+++ b/src/components/layout/TheHeader.css
@@ -1,5 +1,5 @@
 .header {
-  padding: 4.4rem 0;
+  padding: 35px 0;
   box-shadow: 0 1px 4px 0 rgba(0, 21, 41, 0.12);
   background-image: linear-gradient(to bottom, #ececec -32%, #fff 124%);
   margin-bottom: 7rem;
