--- a/src/pages/NewsPage.css
+++ b/src/pages/NewsPage.css
@@ -19,7 +19,6 @@
   font-size: 1.6rem;
 
   width: 98px;
-  max-height: 31px;
 
   text-align: center;
 
@@ -58,9 +57,13 @@
 .news-list {
 }
 
-.news-list-container {
+.news-list__container {
   display: flex;
   flex-wrap: wrap;
 
   gap: 3rem 4rem;
+}
+
+.news-list__no-data {
+  text-align: center;
 }
