--- a/src/styles/media-queries.css
+++ b/src/styles/media-queries.css
@@ -37,9 +37,9 @@ Media queries write order:
 
 /* 1440px */
 @media only screen and (min-width: 90em) {
-  .news-box {
+  /* .news-box {
     flex: 0 0 calc(33.333% - 3rem);
-  }
+  } */
 }
 
 /* 1200px */
@@ -48,9 +48,6 @@ Media queries write order:
 
 /* 1140 Custom breakpoint */
 @media only screen and (max-width: 71.25em) {
-  .container {
-    padding: 0 3rem;
-  }
 }
 
 /* 900px */
